tests/paczka1/fuzzy1/45301340.err
Error in line 3: S952 A3 29,8
Error in line 11: pc3fKKQ28 S952 70,1
Error in line 14: S952 A374 44,3
Error in line 31: LwJXm9AbEv A3 117,9
Error in line 36: LwJXm9AbEv S938 94,5
